horizontal spacing fixes

--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -88,7 +88,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 // Main
 
 .template__content {
-	padding-top: @header-height;
+	padding: @header-height 0;
 }
 
 // Container
