--- a/less/main/variables.less
+++ b/less/main/variables.less
@@ -29,7 +29,7 @@
 // #Layout
 // ------------------------------
 
-@header-height: 2em;
+@header-height: 4em;
 @layout-width-desktop: 900px;
 @layout-width-tablet: 90%;
 @layout-max-width: 1400px;
