--- a/less/widgets/widgets.less
+++ b/less/widgets/widgets.less
@@ -34,10 +34,10 @@
     }
 
     &:first-child {
-        margin-top: 0;
+        //margin-top: 0;
     }
     &:last-child {
-        margin-bottom: 0;
+        //margin-bottom: 0;
     }
 }
 
